--- a/OnlineShop/pom.xml
+++ b/OnlineShop/pom.xml
@@ -174,6 +174,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>1.9.1</version>
+        </dependency>
 
     </dependencies>
 
